<resources>
    <string name="app_name">Firebase</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">Not registered?</string>
    <string name="create_here">Create an account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="text_button_register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_me">Login me</string>
    <string name="text_button_reset_password">Reset password</string>
    <string name="back_text">Back</string>
    <string name="indications_reset_password">We just need your registered email to  sent  you password reset instructions</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_remove_user">Remove user</string>
    <string name="btn_change_email">Update email</string>
    <string name="hint_email">Email</string>
    <string name="btn_change_password">Update password</string>
    <string name="btn_reset_password">Send email for reset password</string>
</resources>
