<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_password"
            android:textColor="@android:color/white"
            android:background="@color/primary"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_email"
            android:textColor="@android:color/white"
            android:background="@color/primary"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_remove_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_remove_user"
            android:textColor="@android:color/white"
            android:background="@color/primary"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>


        <Button
            android:id="@+id/btn_sing_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:background="@color/danger"
            android:textStyle="bold"/>




    </LinearLayout>



</LinearLayout>